--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@supabase/supabase-js": "^2.76.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.548.0",
     "next": "^16.1.6",
     "react": "^19.2.4",
